--- a/hopper.csproj
+++ b/hopper.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net45</TargetFramework>
+    <TargetFramework>netcoreapp3</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
