--- a/View_Controller/Hopper_Tests.csproj
+++ b/View_Controller/Hopper_Tests.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Hopper_Core.csproj" />
+    <ProjectReference Include="..\Utils\Hopper_Utils.csproj" />
   </ItemGroup>
 
 </Project>
