--- a/.Tests/Hopper_Tests.csproj
+++ b/.Tests/Hopper_Tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Hopper_Core.csproj" />
+    <ProjectReference Include="..\Test_Content\Hopper_Test_Content.csproj" />
     <!-- <Reference Include="Newtonsoft.Json"> 
         <HintPath>..\Newtonsoft.Json.dll</HintPath>
     </Reference> -->
