--- a/Utils/Hopper_Utils.csproj
+++ b/Utils/Hopper_Utils.csproj
@@ -2,13 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>net45</TargetFramework>
+    <TargetFramework>net4.8</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json"> 
-        <HintPath>..\Newtonsoft.Json.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
