--- a/Meta/Meta.csproj
+++ b/Meta/Meta.csproj
@@ -1,20 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
   
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net4.8</TargetFramework>
-    <RootNamespace>Meta</RootNamespace>
-    <StartupObject>Meta.Program</StartupObject>
-  </PropertyGroup>
-  
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Build" Version="16.9.0" />
-    <PackageReference Include="Microsoft.Build.Framework" Version="16.9.0" />
-    <PackageReference Include="Microsoft.Build.Tasks.Core" Version="16.9.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis" Version="3.9.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="3.9.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.9.0" />
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="5.0.0" />
-  </ItemGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net4.8</TargetFramework>
+        <RootNamespace>Meta</RootNamespace>
+        <StartupObject>Meta.Program</StartupObject>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <!-- Prevents copying msbuild dlls into the output directory. Instead, locate the ones on system -->
+        <PackageReference Include="Microsoft.Build" Version="15.3.409" ExcludeAssets="runtime" />
+        <PackageReference Include="Microsoft.Build.Utilities.Core" Version="15.3.409" ExcludeAssets="runtime" />
+        <PackageReference Include="Microsoft.Build.Locator" Version="1.1.2"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis" Version="3.9.0" />
+        <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="3.9.0" />
+        <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.9.0" />
+    </ItemGroup>
 
 </Project>
