--- a/Meta/Meta.csproj
+++ b/Meta/Meta.csproj
@@ -8,6 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Shared\Hopper_Shared.csproj" />
+    </ItemGroup>
+
+
+    <ItemGroup>
         <!-- Prevents copying msbuild dlls into the output directory. Instead, locate the ones on system -->
         <PackageReference Include="Microsoft.Build" Version="15.3.409" ExcludeAssets="runtime" />
         <PackageReference Include="Microsoft.Build.Utilities.Core" Version="15.3.409" ExcludeAssets="runtime" />
