--- a/Meta/Meta.csproj
+++ b/Meta/Meta.csproj
@@ -3,8 +3,8 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net4.8</TargetFramework>
-        <RootNamespace>Meta</RootNamespace>
-        <StartupObject>Meta.Program</StartupObject>
+        <RootNamespace>Hopper.Meta</RootNamespace>
+        <StartupObject>Hopper.Meta.Program</StartupObject>
     </PropertyGroup>
 
     <ItemGroup>
