--- a/TestContent/Hopper_Test_Content.csproj
+++ b/TestContent/Hopper_Test_Content.csproj
@@ -3,13 +3,11 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>net48</TargetFramework>
+    <AssemblyName>Hopper.TestContent</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Hopper_Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Shared\Hopper_Shared.csproj" />
   </ItemGroup>
 
