--- a/Core/Hopper_Core.csproj
+++ b/Core/Hopper_Core.csproj
@@ -4,6 +4,7 @@
     <OutputType>Library</OutputType>
     <TargetFramework>net4.8</TargetFramework>
     <RootNamespace>Hopper.Core</RootNamespace>
+    <AssemblyName>Hopper.Core</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
