--- a/Utils/Hopper_Utils.csproj
+++ b/Utils/Hopper_Utils.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>net4.8</TargetFramework>
+    <AssemblyName>Hopper.Utils</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
