--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,22 +4,39 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "Meta compile",
-            "type": "coreclr",
-            "request": "launch",
-            "preLaunchTask": "build",
-            "program": "${workspaceFolder}/Meta/bin/Debug/net4.8/Meta.exe",
-            "args": [],
-            "cwd": "${workspaceFolder}/Meta",
-            "console": "externalTerminal",
-            "stopAtEntry": false
-        },
-        {
-            "name": "Meta compile",
-            "type": "coreclr",
-            "request": "attach",
-            "processId": "${command:pickProcess}"
-        }
+        // {
+        //     "name": "Meta compile",
+        //     "type": "coreclr",
+        //     "request": "launch",
+        //     "preLaunchTask": "build",
+        //     "program": "${workspaceFolder}/Meta/bin/Debug/net4.8/Meta.exe",
+        //     "args": [],
+        //     "cwd": "${workspaceFolder}/Meta",
+        //     "console": "externalTerminal",
+        //     "stopAtEntry": false
+        // },
+        // {
+        //     "name": "Meta compile",
+        //     "type": "coreclr",
+        //     "request": "attach",
+        //     "processId": "${command:pickProcess}"
+        // }
+        // {
+        //     "name": "My test",
+        //     "type": "coreclr",
+        //     "request": "launch",
+        //     "preLaunchTask": "build",
+        //     "program": "${workspaceFolder}/Mine/bin/Debug/net4.8/Mine.exe",
+        //     "args": [],
+        //     "cwd": "${workspaceFolder}/Mine",
+        //     "console": "externalTerminal",
+        //     "stopAtEntry": false
+        // },
+        // {
+        //     "name": "Meta compile",
+        //     "type": "coreclr",
+        //     "request": "attach",
+        //     "processId": "${command:pickProcess}"
+        // }
     ]
 }
