--- a/.Tests/Hopper.Tests.csproj
+++ b/.Tests/Hopper.Tests.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Hopper_Core.csproj" />
-    <ProjectReference Include="..\TestContent\Hopper_Test_Content.csproj" />
+    <ProjectReference Include="..\Core\Hopper.Core.csproj" />
+    <ProjectReference Include="..\TestContent\Hopper.TestContent.csproj" />
   </ItemGroup>
 
 </Project>
