--- a/Meta/Meta.csproj
+++ b/Meta/Meta.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Shared\Hopper_Shared.csproj" />
+        <ProjectReference Include="..\Shared\Hopper.Shared.csproj" />
     </ItemGroup>
 
 
