--- a/Mine/Mine.csproj
+++ b/Mine/Mine.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <StartupObject>Hopper.Mine.Program</StartupObject>
     <AssemblyName>Hopper.Mine</AssemblyName>
-    <TargetFramework>net4.8</TargetFramework>
+    <TargetFrameworks>net4.8;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
