--- a/Meta/Meta.csproj
+++ b/Meta/Meta.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net4.8</TargetFramework>
+        <Name>Meta</Name>
         <StartupObject>Hopper.Meta.Program</StartupObject>
     </PropertyGroup>
 
