--- a/TestContent/Hopper.TestContent.csproj
+++ b/TestContent/Hopper.TestContent.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFrameworks>net4.8;netcoreapp3.1</TargetFrameworks>
+    <Name>TestContent</Name>
     <AssemblyName>Hopper.TestContent</AssemblyName>
   </PropertyGroup>
 
