Commencing refactoring of the code generator

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
-﻿{
+{
     "files.exclude": {
         "**/*.meta": true,
         "*.meta": true
-    }
+    },
+    "python.pythonPath": "D:\\Anaconda\\python.exe"
 }
