--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,7 +27,10 @@
             "request": "launch",
             "preLaunchTask": "build Meta",
             "program": "${workspaceFolder}/build/bin/Debug/net4.8/Hopper.Meta.exe",
-            "args": [],
+            "args": [
+                "../Core/Hopper.Core.csproj", 
+                "../TestContent/Hopper.TestContent.csproj"
+            ],
             "cwd": "${workspaceFolder}/Meta",
             "console": "externalTerminal",
             "stopAtEntry": false
