--- a/Shared/Hopper.Shared.csproj
+++ b/Shared/Hopper.Shared.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net4.8;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net4.8;netcoreapp3.1;net472</TargetFrameworks>
     <Name>Shared</Name>
     <AssemblyName>Hopper.Shared</AssemblyName>
   </PropertyGroup>
