--- a/.Tests/Hopper.Tests.csproj
+++ b/.Tests/Hopper.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net4.8;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net4.8;netcoreapp3.1;net472</TargetFrameworks>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
