--- a/Core/Hopper.Core.csproj
+++ b/Core/Hopper.Core.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net4.8;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net4.8;netcoreapp3.1;net472</TargetFrameworks>
     <AssemblyName>Hopper.Core</AssemblyName>
     <Name>Core</Name>
   </PropertyGroup>
