--- a/Mine/Mine.csproj
+++ b/Mine/Mine.csproj
@@ -1,16 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <StartupObject>Hopper.Mine.Program</StartupObject>
-    <Name>Mine</Name>
-    <AssemblyName>Hopper.Mine</AssemblyName>
-    <TargetFrameworks>net4.8;netcoreapp3.1;net472</TargetFrameworks>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <StartupObject>Mine.Program</StartupObject>
+        <TargetFramework>net4.8</TargetFramework>
+    </PropertyGroup>
+    
+    <ItemGroup>
+        <!-- Prevents copying msbuild dlls into the output directory. Instead, locate the ones on system -->
+        <PackageReference Include="Microsoft.Build" Version="15.3.409" ExcludeAssets="runtime" />
+        <PackageReference Include="Microsoft.Build.Utilities.Core" Version="15.3.409" ExcludeAssets="runtime" />
+        <PackageReference Include="Microsoft.Build.Locator" Version="1.1.2" />
+        <PackageReference Include="Microsoft.VisualStudio.TextTemplating.14.0" Version="14.3.25407" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Core\Hopper.Core.csproj" />
-    <ProjectReference Include="..\TestContent\Hopper.TestContent.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis" Version="3.9.0" />
+        <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="3.9.0" />
+        <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.9.0" />
+    </ItemGroup>
 
 </Project>
