Debug more chains and paths, added flags to entity, move dying into MoreChains

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "clr",
             "request": "launch",
             "preLaunchTask": "build Mine",
-            "program": "${workspaceFolder}/build/bin/Debug/net4.8/Hopper.Mine.exe",
+            "program": "${workspaceFolder}/Mine/bin/Debug/net4.8/Mine.exe",
             "args": [],
             "cwd": "${workspaceFolder}/Mine",
             "console": "externalTerminal",
